Lines changed to remove lines that are affecting CMS usage